src/test/resources/predinline/errors/exhale.vpr
inline predicate falze()
{
    false
}

method test() {
    //:: ExpectedOutput(exhale.failed:insufficient.permission)
    exhale falze()
}